--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,47 @@
-# GitZoom
+# GitZoom .gitignore
+
+# Dependencies
 node_modules/
-*.log
-.DS_Store
-Thumbs.db
-.vscode/
-.idea/
-*.tmp
-*.temp
-.env
-.env.local
+
+# Build outputs
 dist/
 build/
 coverage/
 .nyc_output/
 .cache/
 .parcel-cache/
+
+# Test outputs and artifacts
+TestResults/
+test-results/
+*.Tests.xml
+TestResults.xml
+*.trx
+
+# Logs
+*.log
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Temporary files
+*.tmp
+*.temp
+temp/
+tmp/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# PowerShell profile
+$PROFILE
