refactor: comprehensive codebase cleanup and organization
Documentation:
- Move historical docs to docs/ directory (8 files)
- Create docs/README.md with organized index
- Keep only essential docs in root (README, CHANGELOG, PROJECT_STRUCTURE, LICENSE)

Code Quality:
- Fix empty catch blocks in Utilities.ps1 (add Write-Verbose for debugging)
- Remove unused parameters (Config, Batch)
- Use reserved parameters in function bodies (StagedFiles, MaxJobs, Operation)
- Reduce PSScriptAnalyzer warnings from 14 to 8

Configuration:
- Add PSScriptAnalyzerSettings.psd1 with project-specific rules
- Enhance .gitignore (test data, performance outputs, PowerShell artifacts)

All tests passing, module loads correctly with 29 exported functions

--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,17 @@ test-results/
 *.Tests.xml
 TestResults.xml
 *.trx
+test-data/
+file*.txt
 
 # Logs
 *.log
+logs/
 
 # OS files
 .DS_Store
 Thumbs.db
+desktop.ini
 
 # IDE files
 .vscode/
@@ -31,17 +35,36 @@ Thumbs.db
 *.swp
 *.swo
 *~
+*.code-workspace
 
 # Temporary files
 *.tmp
 *.temp
 temp/
 tmp/
+.temp/
+.tmp/
+
+# Git files
+.git/
+*.orig
 
 # Environment files
 .env
 .env.local
 .env.*.local
 
-# PowerShell profile
+# PowerShell specific
 $PROFILE
+*.ps1~
+PSScriptAnalyzer-report.xml
+
+# Package files
+*.nupkg
+*.zip
+*.tar.gz
+
+# Performance/Benchmark outputs
+*.perf
+performance-results/
+benchmark-results/
