--- a/.vscode-extension/package.json
+++ b/.vscode-extension/package.json
@@ -32,8 +32,8 @@
     "watch": "tsc -w -p ./"
   },
   "devDependencies": {
+    "@types/node": "^14.18.63",
     "typescript": "^4.0.0",
-    "vscode": "^1.1.37",
-    "@types/node": "^14.14.37"
+    "vscode": "^1.1.37"
   }
 }
