feat(vscode): add recommendations menu and codicon status bar

--- a/.vscode-extension/package.json
+++ b/.vscode-extension/package.json
@@ -24,6 +24,11 @@
         "command": "gitzoom.recommendOptimization",
         "title": "GitZoom: Recommend Staging Optimization"
       }
+      ,
+      {
+        "command": "gitzoom.openRecommendationsMenu",
+        "title": "GitZoom: Recommendations Menu"
+      }
     ]
     ,
     "configuration": {
