perf(tests): add measurement artifacts, aggregated visualizations and report; include safe-apply run

--- a/.vscode-extension/package.json
+++ b/.vscode-extension/package.json
@@ -29,6 +29,16 @@
         "command": "gitzoom.openRecommendationsMenu",
         "title": "GitZoom: Recommendations Menu"
       }
+      ,
+      {
+        "command": "gitzoom.applyRecommendations",
+        "title": "GitZoom: Apply Recommended Configs"
+      }
+      ,
+      {
+        "command": "gitzoom.rollbackRecommendations",
+        "title": "GitZoom: Rollback Recommendations (restore backup)"
+      }
     ]
     ,
     "configuration": {
