--- a/.github/workflows/bench-container.yml
+++ b/.github/workflows/bench-container.yml
@@ -2,9 +2,21 @@ name: Bench (containerized)
 
 on:
   workflow_dispatch:
+    inputs:
+      publish:
+        description: 'Publish built image to registry if secrets are configured (true/false)'
+        required: false
+        default: 'false'
   push:
     branches:
       - main
+      - test/infrastructure
+  pull_request:
+    branches:
+      - main
+  schedule:
+    # daily at 02:00 UTC - adjust as needed
+    - cron: '0 2 * * *'
 
 jobs:
   build-and-run:
@@ -33,3 +45,31 @@ jobs:
         with:
           name: bench-artifacts-${{ github.sha }}
           path: artifacts/**
+
+      - name: Optionally publish image to GHCR
+        if: ${{ github.event.inputs.publish == 'true' && secrets.GHCR_TOKEN != '' }}
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GHCR_TOKEN }}
+
+      - name: Push image to GHCR (if enabled)
+        if: ${{ github.event.inputs.publish == 'true' && secrets.GHCR_TOKEN != '' }}
+        run: |
+          docker tag gitzoom/cli:bench-${{ github.sha }} ghcr.io/${{ github.repository_owner }}/gitzoom/cli:${{ github.sha }}
+          docker push ghcr.io/${{ github.repository_owner }}/gitzoom/cli:${{ github.sha }}
+
+      - name: Optionally publish image to Docker Hub
+        if: ${{ github.event.inputs.publish == 'true' && secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        uses: docker/login-action@v2
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Push image to Docker Hub (if enabled)
+        if: ${{ github.event.inputs.publish == 'true' && secrets.DOCKERHUB_USERNAME != '' && secrets.DOCKERHUB_TOKEN != '' }}
+        run: |
+          docker tag gitzoom/cli:bench-${{ github.sha }} ${{ secrets.DOCKERHUB_USERNAME }}/gitzoom-cli:${{ github.sha }}
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/gitzoom-cli:${{ github.sha }}
