--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,25 @@ coverage/
 .nyc_output/
 .cache/
 .parcel-cache/
+
+# Test and benchmark outputs
+TestResults/
+TestResults.xml
+test-results/
+tests/TestResults*
+tests/TestResults/
+
+# Generated test data (use experiments test-data-generator to recreate)
+test-data/
+
+# Environments and tool caches
+.venv/
+.venv-*/
+.mypy_cache/
+
+# Extension/CLI build
+.vscode-extension/
+
+# Semgrep and audit artifacts
+artifacts/semgrep/
+*-semgrep*.json
